--- a/public/index.html
+++ b/public/index.html
@@ -543,7 +543,7 @@
             </div>
             <div class="footer pl-[25%] text-s">
                 <div class="flex">
-                    <a href="https://madebynomad.dev" class="underline text-ang-light">madebynomad.dev</a>
+                    <a href="https://vmosiichuk.dev" class="underline text-ang-light">vmosiichuk.dev</a>
                 </div>
                 <div class="flex w-full flex-wrap gap-3">
                     <a href="polityka-prywatnosci.html" class="underline text-ang-light">Polityka Prywatności</a>
@@ -561,7 +561,7 @@
                 <span class="js-year mr-2"></span>
                 <span class="json-name max-sm:hidden">Klaudia Sałapa</span>
             </p>
-            <a href="https://madebynomad.dev" class="underline text-ang-light -order-1">madebynomad.dev</a>
+            <a href="https://vmosiichuk.dev" class="underline text-ang-light -order-1">vmosiichuk.dev</a>
             <a href="polityka-prywatnosci.html" class="underline text-ang-light max-sm:w-full max-sm:text-center">Polityka Prywatności</a>
         </div>
         <div class="flex -order-1 justify-center w-full gap-3 mb-1 flex-wrap">
