--- a/public/polityka-prywatnosci.html
+++ b/public/polityka-prywatnosci.html
@@ -174,7 +174,7 @@
                     <span class="js-year mr-2"></span>
                     <span class="json-name max-sm:hidden">Klaudia Sałapa</span>
                 </p>
-                <a href="https://madebynomad.dev" class="underline text-ang-light -order-1">madebynomad.dev</a>
+                <a href="https://vmosiichuk.dev" class="underline text-ang-light -order-1">vmosiichuk.dev</a>
                 <a href="./" class="underline text-ang-light max-sm:w-full max-sm:text-center">Strona Główna</a>
             </div>
             <div class="flex -order-1 justify-center w-full gap-3 mb-1 flex-wrap">
